# opencrust

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTOR_ROADMAP.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  SECURITY.md  audit.toml  deny.toml  docker-compose.ollama.yml  docker-compose.yml
.github/: CODEOWNERS  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug.yml  feature-request.yml  feature.yml  skill-request.yml
.github/workflows/: ci.yml  doc-ingest-bench.yml  labeler.yml  release.yml
assets/webchat/: main.js  styles.css
crates/opencrust-agents/: Cargo.toml
crates/opencrust-agents/src/: anthropic.rs  codex.rs  embeddings.rs  lib.rs  ollama.rs  openai.rs  providers.rs  runtime.rs  skill_suggester.rs  tools.rs
crates/opencrust-agents/src/a2a/: client.rs  mod.rs  model.rs
crates/opencrust-agents/src/mcp/: manager.rs  mod.rs  tool_bridge.rs
crates/opencrust-agents/src/providers/: anthropic.rs  mod.rs
crates/opencrust-agents/src/tools/: bash_tool.rs  create_skill_tool.rs  doc_search_tool.rs  file_patch_tool.rs  file_read_tool.rs  file_write_tool.rs  google_search_tool.rs  handoff_tool.rs  memory_tool.rs  mod.rs  search_files_tool.rs  send_message_tool.rs  web_fetch_tool.rs  web_search_tool.rs
crates/opencrust-agents/tests/: anthropic_integration.rs  health_check_concurrency.rs
crates/opencrust-channels/: Cargo.toml
crates/opencrust-channels/examples/: line_test_server.rs
crates/opencrust-channels/src/: hints.rs  lib.rs  protocol.rs  registry.rs  telegram.rs  traits.rs
crates/opencrust-channels/src/discord/: commands.rs  convert.rs  handler.rs  mod.rs
crates/opencrust-channels/src/imessage/: mod.rs
crates/opencrust-channels/src/line/: api.rs  fmt.rs  mod.rs  webhook.rs
crates/opencrust-channels/src/mqtt/: config.rs  detect.rs  mod.rs
crates/opencrust-channels/src/slack/: api.rs  fmt.rs  mod.rs
crates/opencrust-channels/src/wechat/: api.rs  fmt.rs  mod.rs  webhook.rs
crates/opencrust-channels/src/whatsapp/: api.rs  mod.rs  web.rs  webhook.rs
crates/opencrust-cli/: Cargo.toml
crates/opencrust-cli/src/: banner.rs  chat.rs  doctor.rs  main.rs  migrate.rs  update.rs  wizard.rs
crates/opencrust-common/: Cargo.toml
crates/opencrust-common/src/: error.rs  lib.rs  message.rs  types.rs
crates/opencrust-config/: Cargo.toml
crates/opencrust-config/src/: lib.rs  loader.rs  model.rs
crates/opencrust-db/: Cargo.toml
crates/opencrust-db/src/: document_store.rs  lib.rs  memory_store.rs  migrations.rs  session_store.rs  trajectory_store.rs  vector_store.rs
crates/opencrust-gateway/: Cargo.toml
crates/opencrust-gateway/src/: a2a.rs  agent_overrides.rs  agent_router.rs  api.rs  bootstrap.rs  ingest.rs  lib.rs  router.rs  server.rs  state.rs  webchat.html  ws.rs
crates/opencrust-gateway/tests/: auth_test.rs  document_ingest_bench.rs  gateway_integration.rs  line_doc_flow.rs
crates/opencrust-media/: Cargo.toml
crates/opencrust-media/src/: document.rs  lib.rs  processing.rs  tts.rs  types.rs
crates/opencrust-plugins/: Cargo.toml
crates/opencrust-plugins/src/: lib.rs  loader.rs  manifest.rs  runtime.rs  traits.rs
crates/opencrust-security/: Cargo.toml
crates/opencrust-security/src/: allowlist.rs  credentials.rs  lib.rs  pairing.rs  policy.rs  validation.rs
crates/opencrust-skills/: Cargo.toml
crates/opencrust-skills/src/: installer.rs  lib.rs  parser.rs  scanner.rs  security.rs
docs/: book.toml  deployment.md
docs/adr/: 0001-rust-core-polyglot-connectors.md
docs/deployment/: config.basic.yml  config.ollama.yml
docs/security/: architecture.md  attack-surfaces.md  checklist.md
docs/src/: README.md  SUMMARY.md  channels.md  providers.md
docs/src/channels/: line.md  slack.md
docs/src/security/: attack-surfaces.md
docs/theme/: custom.css
i18n/: README.hi.md  README.th.md  README.zh.md
sidecar/whatsapp-web/: package-lock.json
skills/: code-review.md  git-assist.md  shell-explain.md  summarize.md  translate.md  web-lookup.md
