[package]
name = "opencrust-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM agent runtime and orchestration for OpenCrust"

[dependencies]
opencrust-common = { workspace = true }
opencrust-db = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
dirs = "6"
chrono-tz = "0.10"
cron = "0.15"

rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-io"], optional = true }

[features]
default = []
mcp = ["dep:rmcp", "rmcp?/transport-streamable-http-client-reqwest"]

[dev-dependencies]
tempfile = "3"
axum = { workspace = true }
tokio-stream = { workspace = true }
