[package]
name = "opencrust-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Messaging channel traits and implementations for OpenCrust"

[dependencies]
opencrust-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[features]
default = []
discord = []
telegram = []
slack = []
