[package]
name = "opencrust-channels"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Messaging channel traits and implementations for OpenCrust"

[dependencies]
opencrust-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

serenity = { workspace = true, optional = true }
poise = { workspace = true, optional = true }
teloxide = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
dirs = { version = "6", optional = true }
ring = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
rumqttc = { workspace = true, optional = true }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
wiremock = "0.6"

[features]
default = []
discord = ["dep:serenity", "dep:poise"]
telegram = ["dep:teloxide", "dep:futures"]
slack = ["dep:tokio-tungstenite", "dep:futures"]
whatsapp = ["dep:axum"]
whatsapp-web = ["dep:dirs"]
imessage = ["dep:rusqlite", "dep:dirs"]
line = ["dep:axum", "dep:ring", "dep:base64", "dep:futures"]
wechat = ["dep:axum", "dep:ring", "dep:subtle"]
mqtt = ["dep:rumqttc"]

