[package]
name = "opencrust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenCrust CLI - Personal AI assistant platform"

[[bin]]
name = "opencrust"
path = "src/main.rs"

[dependencies]
opencrust-common = { workspace = true }
opencrust-config = { workspace = true }
opencrust-gateway = { workspace = true }
opencrust-channels = { workspace = true }
opencrust-agents = { workspace = true, features = ["mcp"] }
opencrust-db = { workspace = true }
opencrust-plugins = { workspace = true }
opencrust-security = { workspace = true }
opencrust-skills = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
dialoguer = "0.11"
serde_yaml = { workspace = true }
serde = { workspace = true }
dirs = "6"
regex = { workspace = true }
ring = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }
