[package]
name = "opencrust-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, errors, and utilities for OpenCrust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
