[package]
name = "opencrust-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket gateway and control plane for OpenCrust"

[dependencies]
opencrust-common = { workspace = true }
opencrust-config = { workspace = true }
opencrust-channels = { workspace = true, features = ["discord", "telegram", "slack", "whatsapp"] }
opencrust-agents = { workspace = true }
opencrust-db = { workspace = true }
opencrust-security = { workspace = true }
opencrust-plugins = { workspace = true }
opencrust-skills = { workspace = true }

tokio = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
dirs = "6"

[dev-dependencies]
wiremock = "0.6"
tokio-tungstenite = "0.26"
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
