[package]
name = "opencrust-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin system and extension runtime for OpenCrust"

[dependencies]
opencrust-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
wasmtime = { workspace = true }
