[package]
name = "opencrust-security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Security, validation, pairing, and allowlists for OpenCrust"

[dependencies]
opencrust-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
