[package]
name = "opencrust-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencrust-common = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
